[2020-12-11][7]doc/log_format.md->doc/log_format_cn.md

--- a/日志.md
+++ b/日志.md
@@ -1,9 +1,12 @@
 ## 日志
+
+2020-12-11: doc/log_format.md->doc/log_format_cn.md
+
 2020-12-10: util/arena.h&.cc，以及db/memtable.h&.cc(NewIterator)
 
 2020-12-9: include/leveldb/comparator.h&util/comparator.cc(Comparator, BytewiseComparatorImpl, InternalKeyComparator)，include/leveldb/iterator.h(除Cleanup)
 
-2020-12-8：db/memtable.h&.cc(部分)，以及db/dbformat.h&.cc(InternalKey和LookupKey)
+2020-12-8: db/memtable.h&.cc(部分)，以及db/dbformat.h&.cc(InternalKey和LookupKey)
 
 2020-12-7: db/skiplist.h，以及db/memtable.h&.cc(部分)
 
@@ -18,3 +21,9 @@
 ## 资料
 
 [三篇leveldb分析文](https://blog.csdn.net/weixin_42663840)
+
+## 单词
+
+heuristics: 启发式
+
+resync: 重新同步
