[2020-12-14][8]db/log_write.h&.cc, include/leveldb/env.h(WritableFile)

--- a/日志.md
+++ b/日志.md
@@ -1,5 +1,7 @@
 ## 日志
 
+2020-12-14: db/log_write.h&.cc, include/leveldb/env.h(WritableFile)
+
 2020-12-11: doc/log_format.md->doc/log_format_cn.md
 
 2020-12-10: util/arena.h&.cc，以及db/memtable.h&.cc(NewIterator)
